--- a/App/templates/quadras/minhas_quadras.html
+++ b/App/templates/quadras/minhas_quadras.html
@@ -62,7 +62,7 @@
                         <a href="{{ url_for('deletar_quadra', quadra_id=quadra.id) }}" 
                            onclick="return confirm('Tem certeza que deseja deletar esta quadra? Todas as reservas também serão removidas!')" 
                            class="inline-flex items-center px-4 py-2 bg-red-600 hover:bg-red-700 text-white text-sm font-medium rounded-lg transition duration-200">
-                            🗑️ Deletar
+                            Deletar
                         </a>
                     </div>
                 </div>
